--- a/.github/workflows/scripts/pnpmInstall/action.yml
+++ b/.github/workflows/scripts/pnpmInstall/action.yml
@@ -4,7 +4,7 @@ inputs:
   devDeps:
     description: Install production dependencies and development dependencies.
     required: false
-    default: "false"
+    default: 'false'
 runs:
   using: composite
   steps:
