--- a/.github/workflows/scripts/pnpmInstall/action.yml
+++ b/.github/workflows/scripts/pnpmInstall/action.yml
@@ -4,15 +4,17 @@ inputs:
   devDeps:
     description: Install production dependencies and development dependencies.
     required: false
-    default: 'false'
+    default: false
 runs:
   using: composite
   steps:
     - name: Set up pnpm
       uses: pnpm/action-setup@v4
     - name: Install only production dependencies.
-      if: !inputs.devDeps
+      if: ${{ inputs.devDeps == false}}
+      shell: bash
       run: pnpm install --frozen-lockfile --prod
     - name: Install production dependencies and development dependencies.
-      if: inputs.devDeps
+      if: ${{ inputs.devDeps == true}}
+      shell: bash
       run: pnpm install --frozen-lockfile
