--- a/.github/workflows/scripts/pnpmInstall/action.yml
+++ b/.github/workflows/scripts/pnpmInstall/action.yml
@@ -4,7 +4,7 @@ inputs:
   devDeps:
     description: Install production dependencies and development dependencies.
     required: false
-    default: false
+    default: 'false'
 runs:
   using: composite
   steps:
@@ -13,10 +13,10 @@ runs:
       with:
         version: 9
     - name: Install only production dependencies.
-      if: ${{ inputs.devDeps == false}}
+      if: ${{ inputs.devDeps == 'false'}}
       shell: bash
       run: pnpm install --frozen-lockfile --prod
     - name: Install production dependencies and development dependencies.
-      if: ${{ inputs.devDeps == true}}
+      if: ${{ inputs.devDeps == 'true'}}
       shell: bash
       run: pnpm install --frozen-lockfile
