fix(ci): Install deps with dev deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,7 @@ jobs:
           node-version: 20
       - name: Install dependencies
         uses: ./.github/workflows/scripts/pnpmInstall
+        with:
+          devDeps: true
       - name: Run type check
         run: pnpm run check
