--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,7 @@ env:
 
 jobs:
   build-and-push:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -51,6 +52,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
+    if: github.event.pull_request.merged == true
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
