--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,7 +67,8 @@ jobs:
           host: ${{ env.SSH_HOST }}
           username: ${{ env.SSH_USER }}
           key: ${{ env.SSH_PRIVATE_KEY }}
-          source: './docker-compose.yml,${{ env.DEPLOY_PATH }}./docker-compose.yml'
+          source: './docker-compose.yml'
+          target: ${{ env.DEPLOY_PATH }}
           overwrite: true
 
       - name: Deploy to VPS
