ci: ソースコードをチェックアウトしていないことが原因の404エラーを修正

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -61,8 +61,9 @@ jobs:
       SSH_USER: ${{ secrets.SSH_USER }}
       DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
     steps:
-      - name: Temp step to debug
-        run: ls
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Transfer docker-compose to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
