ci: docker-compose の指定されているイメージ名の間違いを修正

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -90,7 +90,9 @@ jobs:
           script: |
             cd $DEPLOY_PATH
             echo $GITHUB_TOKEN | docker login $REGISTRY -u ${{ github.repository_owner }} --password-stdin
-            docker pull $REGISTRY/$IMAGE_NAME:$IMAGE_SHA
+            IMAGE_FULL=$REGISTRY/$IMAGE_NAME:$IMAGE_SHA
+            echo $IMAGE_FULL
+            docker pull $IMAGE_FULL
             docker compose down
-            IMAGE_TAG=$IMAGE_SHA docker compose up -d
+            docker compose up -d
             docker image prune -f
