--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -81,7 +81,7 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          IMAGE_SHA: ${{ env.GITHUB_SHA }}
+          IMAGE_SHA: ${{ github.sha }}
         with:
           host: ${{ env.SSH_HOST }}
           username: ${{ env.SSH_USER }}
@@ -90,7 +90,7 @@ jobs:
           script: |
             cd $DEPLOY_PATH
             echo $GITHUB_TOKEN | docker login $REGISTRY -u ${{ github.repository_owner }} --password-stdin
-            IMAGE_FULL=$REGISTRY/$IMAGE_NAME:$IMAGE_SHA
+            IMAGE_FULL=$REGISTRY/$IMAGE_NAME:$IMAGE_SHA::7
             echo $IMAGE_FULL
             docker pull $IMAGE_FULL
             docker compose down
