--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
     "resolve-tspaths": "^0.8.22",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5"
   }
 }
