--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "editor.formatOnSave": true,
-    "editor.wordWrap": "on",
-    "editor.defaultFormatter": "biomejs.biome"
+	"editor.formatOnSave": true,
+	"editor.wordWrap": "on",
+	"editor.defaultFormatter": "biomejs.biome",
+	"editor.codeActionsOnSave": {
+		"source.organizeImports.biome": "explicit"
+	}
 }
